# CTHM-MOCK-HOTEL-SYSTEM

./: .gitignore  custom-git-push  db.sqlite3  gitUpdate  manage.py  pyproject.toml
Dashboard/: urls.py  views.py
Dashboard/templates/Dashboard/: dashboard.html  edit.html  index.html  list.html  login.html  register.html
HomePage/: admin.py  forms.py  models.py  urls.py  views.py
HomePage/migrations/: 0001_initial.py  0002_contact.py
HomePage/static/css/: accomodation.css  bootstrap.all.css  contact.css  home.css  main.css  style.css
HomePage/static/img/: 5.pg
HomePage/templates/HomePage/: accomodation.html  bookPage.html  contact.html  gallery.html  home.html  listroom.html  roomAdd.html
LoginForm/: apps.py  urls.py  views.py
LoginForm/static/css/: style.css
LoginForm/templates/: login.html  register.html
LoginForm/templates/LoginForm/: login.html  register.html
prmsuMockHotelSystem/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: bootstrap.min.css  dashboards.css  list.css  navbar.css
static/js/: function.js
